# TRELLIS

./: .gitignore  Dockerfile  README.md  pyproject.toml
assets/docktor/: contract.json  manifest.json
trellis/: __init__.py
trellis/cli/: __init__.py  images2twin.py  images2twin_dag.py  make_masks.py  rescale_twin.py
trellis/models/: __init__.py  sparse_elastic_mixin.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
trellis/models/structured_latent_vae/: __init__.py  base.py  decoder_gs.py  decoder_mesh.py  decoder_rf.py  encoder.py
trellis/modules/: utils.py
trellis/modules/attention/: __init__.py  full_attn.py  modules.py
trellis/modules/sparse/: __init__.py  basic.py  linear.py  nonlinearity.py  norm.py  spatial.py
trellis/modules/sparse/attention/: __init__.py  full_attn.py  modules.py  serialized_attn.py  windowed_attn.py
trellis/modules/sparse/conv/: __init__.py  conv_spconv.py  conv_torchsparse.py
trellis/modules/sparse/transformer/: __init__.py  blocks.py  modulated.py
trellis/modules/transformer/: __init__.py  blocks.py  modulated.py
trellis/pipelines/: __init__.py  base.py  trellis_image_to_3d.py  trellis_text_to_3d.py
trellis/pipelines/samplers/: __init__.py  flow_euler.py
trellis/representations/: __init__.py
trellis/representations/gaussian/: __init__.py  gaussian_model.py
trellis/representations/mesh/: __init__.py  cube2mesh.py
trellis/representations/octree/: __init__.py  octree_dfs.py
trellis/representations/radiance_field/: __init__.py  strivec.py
trellis/utils/: elastic_utils.py  general_utils.py  geometric_utils.py  postprocessing_utils.py  random_utils.py  render_utils.py
